2006-08-13  Romain Francoise  <romain@orebokech.com>

	* mm-extern.el (mm-extern-mail-server): End `y-or-n-p' prompt with a
	space.

2006-08-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el (uncompface): Use binary rather than raw-text-unix.

2006-08-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el (uncompface): Make sure the eol conversion doesn't take
	place when communicating with the external programs.  Reported by
	ARISAWA Akihiro <ari@mbf.ocn.ne.jp>.

2006-07-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnheader.el (nnheader-insert-head): Fix typo in comment.

2006-07-31  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* nnweb.el (nnweb-google-parse-1): Update regexp for author and date.
	Make it more robust by parsing author and date independently.

2006-07-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnheader.el (nnheader-insert-head): Make it work with Mac as well.

2006-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnheader.el (nnheader-insert-head): Make it work even if the file
	uses CRLF for the line-break code.

2006-07-19  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* mm-url.el (mm-url-insert-file-contents): Inhibit Connection: close
	workaround for the url package included with Emacs.

	* nnweb.el (nnweb-google-create-mapping): Update regexp.

2006-07-18  Karl Fogel  <kfogel@red-bean.com>

	* nnmail.el (nnmail-article-group): If splitting raises an error, give
	some information about the error when saying that the `bogus' mail
	group will be used.

2006-07-18  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	[ Backported bug fixes from No Gnus. ]

	* nnweb.el (nnweb-google-parse-1): Update regexp for author and date.
	(nnweb-google-search): Respect nnweb-max-hits as upper bound.
	(nnweb-request-article): Do proper xwfu encoding when fetching articles
	by message-id.

	* gnus-srvr.el (gnus-browse-unsubscribe-group): Don't subscribe
	unsubscribed groups as if they were killed ones.  It causes duplicate
	entries in gnus-newsrc-alist.
